# booker

./: .flake8  .gitignore  README.md  go.mod  go.sum  pyproject.toml
booker/: __main__.py  app.py  auth.py  bot.py  drive.py  sheet.py  tmpl.py
cmd/bot/: app.go  main.go
internal/bot/: bot.go  event.go  message.go  mux.go
